# CelestialReverie

./: CMakeLists.txt  CMakeLists_TestGLFW.txt  CMakeLists_TestGLM.txt  CelestialReverie.pro  CelestialReverieLib.pro  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  test_build.bat
include/glad/: glad.h
include/rendering/: camera.h  celestialGLWidget.h  myglobj.h  shader.h
include/simulation/: celestial_body.h  celestial_reverie.h  celestial_system.h  simulate_algorithm.h  simulate_algorithm_parallel.h
lib/: glad.c
resource/: font.qrc
sample/: sample_input.csv
src/GUI/: main.cpp  mainwindow.h  mainwindow.ui
src/rendering/: celestialGLWidget.cpp  myglobj.cpp  view.cpp
src/simulation/: celestial_body.cpp  celestial_reverie.cpp  celestial_system.cpp  simulate_algorithm.cpp  simulate_algorithm_parallel.cpp  test_simulation.cpp
tests/: test_.cpp  test_glfw.cpp  test_glm.cpp
